# relyable

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  NO-RELICENSE.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  honesty.toml  pyproject.toml
.honesty/: baseline.json
demos/: README.md
demos/cold_golden/: CLASSIFY_POOL.json  CODE_PRESENCE_POWERED.json  COLD_GOLDEN_ADDRESSABLE.json  COLD_GOLDEN_ADDRESSABLE_LEVERA.json  COLD_GOLDEN_POWERED.json  COLD_GOLDEN_RUN.json  COLD_GOLDEN_RUN.md  COLD_GOLDEN_SAMPLE2.json  CONTROL_RUN.json  METAMORPHIC_ADDRESSABLE.json  METAMORPHIC_ADDRESSABLE_TIER5.json  METAMORPHIC_CONVERTER_FAMILY.json  METAMORPHIC_POWERED.json  METAMORPHIC_ROUNDTRIP.json  NETCUT_FINDINGS.md  NETCUT_SCAN.json  NETPOWER_RUN.json  PROSE_EXECUTION_MODEL.json  README.md  classify_local.py  classify_prose.py  code_presence.py  cold_golden.py  fetch_sample.py  metamorphic.py  netcut.py  netcut_parse.py  netpower.py  netscan.py
demos/cold_golden/_netpower_hooks/: sitecustomize.py
demos/directory_funnel/: FUNNEL_RUN.md  README.md  collect_clawhub_sample.sh  funnel.py
demos/prose_property_prove/: PROVE_RUN.md  README.md  run_prove.sh  spec.json  spec_schema_loose.json  spec_schema_tight.json
demos/self_spec/: CLAWHUB_SAMPLE_RUN.md  README.md  SELF_SPEC_RUN.md  run_self_spec.py  sample_clawhub.py
demos/self_spec/fixtures/jsonpick-broken/: SKILL.md
demos/self_spec/fixtures/jsonpick-broken/scripts/: pick.py
demos/self_spec/fixtures/jsonpick-honest/: SKILL.md
demos/self_spec/fixtures/jsonpick-honest/scripts/: pick.py
demos/tool_bundle_rederive/: LIVE_RUN.md  README.md  TOOL_BUNDLE_RUN.md  rederive_bundle.py  run_live.sh
relyable/: __init__.py
relyable/adapters/: SKILL_INSTALL_GATE.md  __init__.py  _skillpack.py  installpolicy.py
relyable/adapters/hermes/: DISCOVERY.md  LEARN_INTEGRATION_SCOPE.md  MEMORY_DISCOVERY.md  SOUL.md  __init__.py  _mutate.py  cold_gate.py  config.py  deliver_guard.py  goal_guard.py  guard.py  learn_guard.py  memory_provider.py
relyable/adapters/openclaw/: DISCOVERY.md  __init__.py  cli.py  config.py  deliver_cli.py  deliver_gate.py  recall_gate.py
relyable/adapters/openclaw/plugin/: README.md  deliver-gate.mjs  deliver-gate.test.mjs  deliver-index.mjs  index.mjs  package.json  recall-gate.mjs  recall-gate.test.mjs
relyable/gate/: __init__.py  admission.py
relyable/memory/: README.md  __init__.py  anchor.py  bundle.py  cli.py  gate.py
relyable/memory/examples/: __init__.py  recall_grader.py  recompute_grader.py  safe_versions.py
relyable/scan/: __init__.py  cli.py
relyable/skills/: README.md  __init__.py  _exec_env.py  _sandbox_worker.py  anti_vacuity.py  bundle.py  cli.py  cold_golden.py  exogenous_manifest.py  gate.py  property_grader.py  registry.py  scaffold.py  self_spec.py  verdict_grader.py
relyable/skills/examples/: __init__.py  exec_skill_grader.py  interval_grader.py  json_toolkit_grader.py
relyable/verdicts/: README.md  __init__.py  agent_tool.py  audit_emit.py  baseline.py  cli.py  config.py  gate.py  mcp_server.py  runner.py  sandbox.py  verdict.py
relyable/verdicts/audit_assets/: honesty.spec.json
relyable/verdicts/ratchets/: __init__.py  diff_coverage.py  mutation.py  no_new_skip.py  no_shrink.py
tests/: fake_hermes.py  skills_fixtures.py  test_adapter_hermes.py  test_adapter_hermes_deliver.py  test_adapter_hermes_goal.py  test_adapter_hermes_learn.py  test_adapter_hermes_memory.py  test_adapter_openclaw.py  test_adapter_openclaw_deliver.py  test_admission_gate.py  test_agent_tool.py  test_anti_vacuity.py  test_audit_emit.py  test_cli.py  test_diff_coverage.py  test_gate.py  test_installpolicy.py  test_memory.py  test_memory_anchor.py  test_memory_cli.py  test_mutation.py  test_property_grader.py  test_prove_cli.py  test_runner.py  test_scaffold.py  test_scan_surface.py  test_self_spec.py  test_separation_of_duties.py  test_skillpack.py  test_skills.py  test_skills_cli.py  test_skills_sandbox.py  test_verdict.py  test_verdict_grader.py
tests/fixtures/: mutmut_results.txt  scaffold_t0_determinism.snapshot.py  scaffold_t2_schema.snapshot.py  stryker_mutation_report.json
